// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should handle click 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw kkbCcO"
    data-testid="Card"
  >
    Test
    <div
      class="flex items-center space-x-2 absolute right-0 top-0 m-2"
    />
  </div>
</DocumentFragment>
`;

exports[`Card should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw deMsQD"
    data-testid="Card"
  >
    <div
      class="flex items-center space-x-2 absolute right-0 top-0 m-2"
    />
  </div>
</DocumentFragment>
`;
